# kioto

./: .gitignore  README.md  install_dependencies.sh  pyproject.toml  spsc_buf_impl.md
.github/workflows/: autofix.yml  ci.yml
aiofiles/: __init__.py
kioto/: __init__.py
kioto/channels/: __init__.py  api.py  error.py  impl.py
kioto/futures/: __init__.py  api.py  impl.py
kioto/internal/: __init__.py  buffer.py  queue.py
kioto/sink/: impl.py
kioto/streams/: __init__.py  api.py  impl.py
kioto/time/: impl.py
tests/: test_buffer.py  test_channels.py  test_channels_slow.py  test_futures.py  test_streams.py  test_time.py
